--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -534,7 +534,8 @@ input.cart-drawer__input--property {
 	margin-top: 0;
 }
 
-.ajax-cart-discounts {
+.ajax-cart-discounts,
+.ajax-cart-product-option {
 	margin-top: 10px;
 	svg {
 		width: 20px;
