--- a/snippets/form-product-combo.liquid
+++ b/snippets/form-product-combo.liquid
@@ -72,6 +72,12 @@
         {% endfor %}
     </select>
     <input
+        hidden
+        class="hidden"
+        type="text"
+        name="ComboLayout"
+    >
+    <input
         value="{{ combo_discount }}"
         hidden
         class="hidden"
